@@ -108,9 +108,6 @@
       <id>printer/Kyocera-FS-850</id>
     </printer>
     <printer>
-      <id>printer/Panasonic-KX-P4450</id>
-    </printer>
-    <printer>
       <id>printer/Tally-MT908</id>
     </printer>
   </printers>
