@@ -93,5 +93,8 @@
     <printer>
       <id>printer/Lexmark-Winwriter_400</id>
     </printer>
+    <printer>
+      <id>printer/Panasonic-KX-P4450</id>
+    </printer>
   </printers>
 </driver>
