@@ -1,0 +1,41 @@
+<option type="enum" id="opt/158">
+  <arg_shortname>
+    <en>Resolution</en>
+  </arg_shortname>
+  <arg_longname>
+    <en>Resolution</en>
+  </arg_longname>
+  <arg_execution>
+    <arg_group>General</arg_group>
+    <arg_order>100</arg_order>
+    <arg_spot>A</arg_spot>
+    <arg_substitution />
+    <arg_proto> -r%s</arg_proto>
+  </arg_execution>
+  <constraints>
+    <constraint sense="true">
+      <driver>ibmpro</driver>
+      <arg_defval>ev/ibmpro-Resolution-60x72dpi</arg_defval>
+    </constraint>
+  </constraints>
+  <enum_vals>
+    <enum_val id="ev/ibmpro-Resolution-60x72dpi">
+      <ev_longname>
+        <en>60x72 dpi</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>60x72dpi</en>
+      </ev_shortname>
+      <ev_driverval>60x72</ev_driverval>
+    </enum_val>
+    <enum_val id="ev/ibmpro-Resolution-60x72dpi">
+      <ev_longname>
+        <en>120x72 dpi</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>120x72dpi</en>
+      </ev_shortname>
+      <ev_driverval>120x72</ev_driverval>
+    </enum_val>
+  </enum_vals>
+</option>
