@@ -18,7 +18,7 @@
     </text>
   </lang>
   <functionality>A</functionality>
-  <driver>ljet3</driver>
+  <driver>ljetplus</driver>
   <comments>
     <en>1M RAM std, 5M max.</en>
   </comments>
