@@ -1,7 +1,16 @@
+2012-02-10  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/ibmpro-Resolution.xml: Added "Resolution" option to "ibmpro"
+	  driver. Without specifying the resolution the driver does not work
+	  (Debian bug #554769).
+	* printer/Panasonic-KX-P4450.xml, driver/ljet3.xml, driver/ljetplus.xml:
+	  Assigned driver "ljetplus" instead of "ljet3" to the Panasonic
+	  KX-P4450, as only "ljetplus" actually works (Debian bug #350319).
+
 2012-01-23  Seiko Epson Corporation <linux-printer@epson.jp>
 	* db/source/printer/Epson-EP_904F.xml,
-         db/source/printer/Epson-WF-7018.xml,
-         db/source/printer/Epson-WP-4545.xml:
+          db/source/printer/Epson-WF-7018.xml,
+          db/source/printer/Epson-WP-4545.xml:
 	  Fixed typo.
 
 2012-01-18 David Williams <dwilliams@ricohsv.com>
